--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,3 +1,9 @@
+- date: <strong>May 2025</strong>
+  headline: "Feeling very honored. Received my third <a href=\"https://conf.researchr.org/home/fse-2025\">FSE 2025</a> Distinguished Reviewer Award."
+
+- date: <strong>May 2025</strong>
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/fse-2026\">FSE 2026</a> in Montreal, Canada."
+
 - date: <strong>January 2025</strong>
   headline: "Got invited by the IEEE Transactions on Software Engineering to write a retrospective of our work on ChangeDistiller that was selected as one of the most influential papers of IEEE TSE’s 4th decade. <a href=\"/papers/Fluri2025-retrospective.pdf\">Early Access Version</a>."
 
