fixed error in news

--- a/_data/news.yml
+++ b/_data/news.yml
@@ -1,5 +1,5 @@
 - date: <strong>June 2025</strong>
-  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/msr-2026\">MSR 2026</a> co-located with <a href=\"https://conf.researchr.org/home/icse-2026\">ICSE 2026</a> in Rio de Janeiro, Brazil.""
+  headline: "Joined the PC of <a href=\"https://conf.researchr.org/home/msr-2026\">MSR 2026</a> co-located with <a href=\"https://conf.researchr.org/home/icse-2026\">ICSE 2026</a> in Rio de Janeiro, Brazil."
 
 - date: <strong>May 2025</strong>
   headline: "Feeling very honored. Received my third <a href=\"https://conf.researchr.org/home/fse-2025\">FSE 2025</a> Distinguished Reviewer Award."
